[project]
name = "t2o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "injector>=0.22.0",
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-dotenv>=0.5.2",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]
